--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,41 @@
   height: 100vh;
   width: 100%;
 }
+
+.navBar{
+  position: absolute;
+  z-index: 1;
+  top: 25%;
+  width: 90%;
+  margin-left: 5%;
+  margin-right:5%;
+  background-color: #2295bc;
+  border-radius: 4px;
+}
+.nav-link{
+ margin-right: 25px;
+}
+
+#medlabLogo{
+  position: absolute;
+  z-index: 1;
+  top: 30px;
+  left: 5%;
+}
+#medlabPhone{
+  position: absolute;
+  z-index: 1;
+  top: 8%; 
+  right: 30%;
+}
+#medlabPhoneNo{
+  position: absolute;
+  z-index: 1;
+  top: 8%;
+  right: 20%;
+}
+.footer{
+  background-color: #2088aa;
+  margin:0px auto;
+  padding: 20px 0px 20px 0px;
+}
