--- a/src/App.css
+++ b/src/App.css
@@ -47,12 +47,6 @@
   top: 8%;
   right: 20%;
 }
-.footer{
-  background-color:#2a93c9;
-  margin:0px auto;
-  padding: 20px 0px 20px 0px;
-}
-
 .toggleLogo{
   margin-left: 450px;
 }
@@ -170,6 +164,10 @@
   width:50px;
   height: 50px;
 }
+.actBox{
+  
+  margin: 20px;
+}
 
 @keyframes rotateIn {
   from {
@@ -204,4 +202,51 @@
 
 .rotateOutDownLeft {
   animation: rotateOutDownLeft 1s;
+}
+
+/* footer */
+.footer{
+  background-color:#2a93c9;
+  margin:0px auto;
+  padding: 20px 0px 20px 0px;
+}
+.line{
+  width: 70%;
+  height: 1px;
+  background-color: white;
+  margin-bottom:15px ;
+}
+.socialMediaIcons i{
+ height:40px;
+ width: 40px;
+ background-color: #f5f6fa;
+ border-radius: 20px;
+ text-align: center;
+ margin: 5px;
+ line-height: 40px;
+ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 15px 0 rgba(0,0,0,0.4);
+}
+
+.socialMediaIcons a i{
+  transition: all 0.3s linear;
+}
+
+.socialMediaIcons a:hover i{
+  transform: scale(1.3);
+}
+
+.fa-facebook{
+  color:#3b5998  ;
+}
+.fa-linkedin{
+  color:#0097e6 ;
+}
+.fa-twitter{
+  color:#0097e6 ;
+}
+.fa-instagram{
+  color: #e84393;
+}
+.fa-map-marker{
+  color: #c4302b;
 }
