--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,19 @@
 }
 @media only screen and (max-width: 767px) {
 .carousel img{
-    height: 70vh;
-    width: 100%;
+    height: 25vh;
 }
 .madlab{
   height: 50vh;
+}
+.carouselDiv{
+  position: relative; 
+  top: 80px;
+  margin: 0px auto;
+  width: 90%;
+  border: 5px solid #2295bc;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.8);
 }
 }
 .navBar{
@@ -172,6 +180,17 @@
 
 
 /* Packages */
+/* COMBO-PACKAGES */
+
+.formDiv{
+  border: 5px solid #2295bc;
+  border-radius: 2px;
+  width: 300px;
+  height: 40vh;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.8);
+}
+
+/* LIFECYCLE */
 .lifeCylce{
   margin: 20px 0px;
 }
