--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,26 @@
   margin: 20px;
 }
 
+/* what Makes US Different Section */
+.whatMakes{
+  height:100px;
+  width: 100px;
+  background-color: #f5f6fa;
+  border-radius: 50px;
+  text-align: center;
+  margin: 5px;
+  line-height: 120px;
+  border: 2px solid silver;
+}
+.fa-stethoscope{
+  color:#0097e6 
+} 
+.fa-medkit{
+  color:brown 
+} 
+.fa-heartbeat{
+  color:red
+} 
 
 /* Packages */
 /* COMBO-PACKAGES */
@@ -265,22 +285,6 @@
   color: #c4302b;
 }
 
-.whatMakes{
-  height:100px;
-  width: 100px;
-  background-color: #f5f6fa;
-  border-radius: 50px;
-  text-align: center;
-  margin: 5px;
-  line-height: 120px;
-  border: 2px solid silver;
+.properPadding{
+  padding-top: 150px;
 }
-.fa-stethoscope{
-  color:#0097e6 
-} 
-.fa-medkit{
-  color:brown 
-} 
-.fa-heartbeat{
-  color:red
-} 
