--- a/src/App.css
+++ b/src/App.css
@@ -225,6 +225,55 @@
   color:red
 } 
 
+/* Report form*/
+.inputStyle{
+  background-color:#fffff000;
+  height:50px;
+  border-color: white;
+  border-width: 2px;
+  
+}
+.btnInput{
+  background-color: white;
+  color: black;
+  border-radius: 30px;
+  border-color:white;
+  padding: 10px 30px;
+}
+.formImg{
+ width:100%
+}
+.formPosition{
+  position:absolute;
+}
+@media only screen and (max-width: 360px) {
+  .formImg{
+     height:60vh;
+    }
+  .formPosition{
+    top:180%;
+    right:8%;
+    width:50%;
+  }
+  } 
+@media only screen and (mix-width: 361px) {
+  .formImg{
+      height:80vh;
+    }
+   .formPosition{
+    top:195%;
+    right:8%;
+    width:40%;
+   } 
+  } 
+.fontStyle { 
+  color: white; 
+  font-size: 40px; 
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px; 
+  -webkit-text-stroke-color: white; 
+}
+
 /* Packages */
 /* COMBO-PACKAGES */
 
