--- a/src/App.css
+++ b/src/App.css
@@ -241,37 +241,14 @@
   padding: 10px 30px;
 }
 .formImg{
- width:100%
+ width:100%;
+ height:70vh;
 }
 .formPosition{
   position:absolute;
-}
-@media only screen and (max-width: 360px) {
-  .formImg{
-     height:60vh;
-    }
-  .formPosition{
-    top:180%;
-    right:8%;
-    width:50%;
-  }
-  } 
-@media only screen and (min-width: 361px) {
-  .formImg{
-      height:80vh;
-    }
-   .formPosition{
-    top:195%;
-    right:8%;
-    width:40%;
-   } 
-  } 
-.fontStyle { 
-  color: white; 
-  font-size: 40px; 
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-text-stroke-width: 1px; 
-  -webkit-text-stroke-color: white; 
+  top:12%;
+  left: 8%;
+  /* width:50%; */
 }
 
 /* Packages */
