--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,38 @@
 }
 html {
   overflow-y: scroll;
-}
+}.carouselDiv
 /* Header */
+.carousel{
+  position: relative;
+}
+.carouselDiv{
+    position:relative;
+    width:1200px;
+    height:660px;
+    top:0px;
+    margin:0 auto;
+}
 .carousel img{
-  height: 100vh;
+  height:660px;
   width: 100%;
 }
+@media only screen and (max-width:767px){
+  .backImg img{
+    height:75vh;
+  }
+} 
+@media only screen and (min-width:768px){
+  .backImg img{
+    height:100vh ;
+  }
+} 
+.backImg img{
+  width: 100%;
+}
+.backImg{
+  transform:scaleX(-1);
+ }
 .medlab{
     position: absolute;
     z-index: 1;
@@ -28,27 +54,13 @@ html {
 .madlab{
   height: 50vh;
 }
-/* .carouselDiv{
-  position: relative; 
-  top: 80px;
-  margin: 0px auto;
-  width: 90%;
-  border: 5px solid #2295bc;
-  border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.8);
-} */
 }
 .navBar{
-  position: absolute;
-  z-index: 2;
-  top: 25%;
+  top:200px;
+  margin: 0 auto;
   background-color: #2295bc;
-}
-.navShort{
-  width: 90%;
-  margin-left: 5%;
-  margin-right:5%;
   border-radius: 4px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.8);
 }
 .navScreenSize{
   background-color:#2295bc ;
@@ -62,12 +74,12 @@ html {
  margin-right: 25px;
  transition-delay:2s ;
 }
-.homeLogo{
-  width: 220px;
+.homeLogo img{
+  width: 230px;
   height: 100px;
   position: relative;
 }
-.medlabPhone i{
+.medlabPhone i,.medlabMap i{
   position: absolute;
   z-index: 2;
   top: 10%; 
@@ -80,11 +92,25 @@ html {
   border-radius: 30px;
   text-align: center;
 }
-#medlabPhoneNo{
+.medlabPhone{
   position: absolute;
-  z-index: 2;
-  top: 13%;
-  right: 19%;
+  right:550px;
+  top:100px
+}
+.medlabPhoneNo{
+  position: absolute;
+  right: 410px;
+  top:120px
+}
+.medlabMap{
+  position: absolute;
+  right: 260px;
+  top:100px
+}
+.medlabAdd{
+  position: absolute;
+  right: 100px;
+  top:120px
 }
 .toggleLogo{
   margin-left: 450px;
@@ -97,37 +123,40 @@ html {
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
-.backImg img{
-  width: 100%;
-  height: 70vh;
-}
 @media only screen and (min-width: 768px) {
   .Appoint{
-    top:80%;
-    left:55%;
-    width:100%;
-    transform: translate(-50%,-50%);
-  }
-}  
-@media only screen and (max-width: 767px) {
-  .Appoint{
-    top:50%;
-    left:54%;
-    width:100%;
-    transform: translate(-50%,-50%);
+    bottom:50px;
+    left:100px;
   }
 } 
-.carouselDiv{
-  position: relative;
-}
+@media only screen and (max-width: 1289px) {
+  .appointDiv{
+  position:absolute;top:0px;height:70vh;width:100%;margin:auto
+  }
+  .appointExt{
+    position:relative;
+    top:50%;
+    left:50%;
+    color:white;
+    transform: translate(-50%,-50%); 
+    text-align: center;
+    font-size: calc(1rem + 1vw);
+  } 
+} 
 .Appoint{
   position:absolute;
   color:white;
+  /* top:50%;
+  left:50%; */
 }
-.Appoint h1{
+.Appointext h1{
   font-size: calc(2rem + 1vw);
 }
-
+.homeLogo{
+  position: absolute;
+  left: 100px;
+  top: 85px;
+}
 /* burgerMenu */
 .bm-item {
   display: inline-block;
@@ -200,6 +229,7 @@ html {
   width: 100%;
   height: 50px;
   position: fixed;
+  z-index: 4;
   background-color:#2a93c9 ;
 }
 /* .hamBurLogo{
@@ -277,7 +307,46 @@ html {
   left: 8%;
   /* width:50%; */
 }
-/* Report Form */
+.formPosition h3{
+  font-size: calc(1em + 2vw);
+}
+.formPosition small{
+  font-size: calc(5px + 1vw);
+}
+/* HealthReport */
+
+.lifeCycleDiv,.healthCareDiv,.reportDiv{
+    position: relative;
+    width:100%;
+    /* background-color: red; */
+  }
+.reportDiv{
+  height: 80vh;
+} 
+@media only screen and (max-width: 767px) {
+  .healthCareDiv{
+    height: 420px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .healthCareDiv{
+    height: 600px;
+  }
+}
+.lifeCycleDiv{
+  height: 300px;
+}  
+.reportDiv img{
+  position:absolute;
+  top: 10%;
+  width: 100%;
+  height:80%;
+}
+.reportDiv .formPosition{
+  position: absolute;
+  top: 20%;
+  left: 2%;
+}
 .threeD{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2);
 }
@@ -287,46 +356,7 @@ html {
   width: 300px;
   height: 40vh;
 }
-@media only screen and (max-width: 320px) {
-  .formImg{
-    height:60vh
-  }
- }
-@media only screen and (min-width: 360px) {
- .formImg{
-   height:50vh
- }
-}
-@media only screen and (min-width: 375px) {
-  .formImg{
-    height:45vh
-  }
- }
-@media only screen and (min-width: 411px) {
-  .formImg{
-    height:40vh
-  }
-}
-@media only screen and (min-width: 414px) {
-  .formImg{
-    height: 45vh;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .formImg{
-    height: 40vh;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .formImg{
-    height: 30vh;
-  }
-}
-@media only screen and (min-width: 1025px) {
-  .formImg{
-    height: 70vh;
-  }
-}
+
 /* Packages */
 /* Health-PACKAGES */
 .tag {
@@ -345,7 +375,7 @@ html {
 	line-height: 38px;
 
   padding: 0 10px 0 10px;
-  transform: rotate(90deg);
+  /* transform: rotate(90deg); */
   
 }
 /* Makes the triangle */
@@ -373,25 +403,19 @@ html {
 	left: -9px;
 	top: 17px;
 }
-.healthCare{
- position: absolute;
- top:25px;
- left:-50px;
-}
+/* */
 .healthCareImg{
   filter: grayscale(80%);
-  height: 350px;
 }
 .healthCareButton{
   position: absolute;
   bottom:15px;
   right:15px;
  }
-
 /* LIFECYCLE */
 .lifeCylce{
   margin: 20px 0px;
-}
+}red
 .cardStyling img{ 
  border-radius: 5px;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2);
@@ -430,9 +454,6 @@ html {
     width:500px ;
   }
 }
- .backImg{
-  transform:scaleX(-1);
- }
 /* footer */
 .footer{
   background-color:#2a93c9;
@@ -472,15 +493,21 @@ html {
 }
 
 @media only screen and (max-width: 420px) {
-  .properPadding{
-    padding-top: 50px;
-  }
   .Margin{
     margin-top: 20px;
   }
 }
 @media only screen and (min-width: 421px) {
   .properPadding{
-    padding-top: 100px;
+    padding-top: 50px;
   }
+}
+
+.aboutButton {
+  border: none;
+  color: white;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #4CAF50;
 }
