--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 html {
   overflow-y: scroll;
-}.carouselDiv
+}
 /* Header */
 .carousel{
   position: relative;
@@ -13,15 +13,15 @@ html {
 .carouselDiv{
     position:relative;
     width:1200px;
-    height:660px;
+    /* height:660px; */
     top:0px;
     margin:0 auto;
 }
 .carousel img{
-  height:660px;
+  /* height:660px; */
   width: 100%;
 }
-@media only screen and (max-width:767px){
+/* @media only screen and (max-width:767px){
   .backImg img{
     height:75vh;
   }
@@ -30,31 +30,48 @@ html {
   .backImg img{
     height:100vh ;
   }
-} 
+}  */
+
+.medlab{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+}
+@media only screen and (max-height:558px),(max-width:500){
+.medlab{
+  height: 100vh;
+}
+.carousel img,.carouselDiv{
+  height: 100vh;
+}
+.appointDiv{
+  height:100vh
+}
+.backImg img{
+  height:100vh ;
+}
+}
+@media only screen and (min-height: 559px),(max-width:501px) {
+.appointDiv{
+  height:660px
+}
+.carousel img,.carouselDiv{
+    height:660px;
+}
+.madlab{
+  height: 50vh;
+}
+.backImg img{
+  height:660px ;
+}
+}
+
 .backImg img{
   width: 100%;
 }
 .backImg{
   transform:scaleX(-1);
  }
-.medlab{
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-}
-@media only screen and (min-width:768px){
-.medlab{
-  height: 100vh;
-}
-}
-@media only screen and (max-width: 767px) {
-.carousel img{
-    height: 70vh;
-}
-.madlab{
-  height: 50vh;
-}
-}
 .navBar{
   top:200px;
   margin: 0 auto;
@@ -128,10 +145,15 @@ html {
     bottom:50px;
     left:100px;
   }
-} 
+}
 @media only screen and (max-width: 1289px) {
   .appointDiv{
-  position:absolute;top:0px;height:70vh;width:100%;margin:auto
+  position:absolute;
+  top:0;
+  /* height:75vh; */
+  width:100%;
+  /* background-color: red; */
+  margin:auto
   }
   .appointExt{
     position:relative;
@@ -246,8 +268,8 @@ html {
   width:50px;
   height: 50px;
 }
+
 .actBox{
-  
   margin: 20px;
 }
 .hamInStyle img{
@@ -321,7 +343,7 @@ html {
     /* background-color: red; */
   }
 .reportDiv{
-  height: 80vh;
+  height: 60vh;
 } 
 @media only screen and (max-width: 767px) {
   .healthCareDiv{
@@ -344,7 +366,7 @@ html {
 }
 .reportDiv .formPosition{
   position: absolute;
-  top: 20%;
+  top: 25%;
   left: 2%;
 }
 .threeD{
@@ -511,3 +533,4 @@ html {
   cursor: pointer;
   background-color: #4CAF50;
 }
+
