--- a/src/Animation.css
+++ b/src/Animation.css
@@ -1,38 +1,3 @@
-@keyframes rotateIn {
-    from {
-      transform-origin: center;
-      transform: rotate3d(0, 0, 1, -200deg);
-      opacity: 0;
-    }
-  
-    to {
-      transform-origin: center;
-      transform: none;
-      opacity: 1;
-    }
-  }
-  
-  .rotateIn {
-    animation: rotateIn 1s;
-  }
-  
-  @keyframes rotateOutDownLeft {
-    from {
-      transform-origin: left bottom;
-      opacity: 1;
-    }
-  
-    to {
-      transform-origin: left bottom;
-      transform: rotate3d(0, 0, 1, 45deg);
-      opacity: 0;
-    }
-  }
-  
-  .rotateOutDownLeft {
-    animation: rotateOutDownLeft 1s;
-  }
-
   @keyframes flash {
     from {
       opacity: 0;
@@ -46,3 +11,39 @@
   .flash {
     animation: flash 1s;
   }  
+
+
+  @keyframes zoomIn {
+    from {
+      opacity: 0;
+      transform: scale3d(.3, .3, .3);
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  }
+  
+  .zoomIn {
+    animation: zoomIn 1s;
+  }
+  
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translate3d(0, 100%, 0);
+    }
+  
+    to {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  
+  .fadeInUp {
+    animation: fadeInUp 1s;
+  }
+  
+  
+  
+  
