--- a/src/Animation.css
+++ b/src/Animation.css
@@ -45,5 +45,22 @@
   }
   
   
+  @keyframes rotateIn {
+    from {
+      transform-origin: center;
+      transform: rotate3d(0, 0, 1, -200deg);
+      opacity: 0;
+    }
+  
+    to {
+      transform-origin: center;
+      transform: none;
+      opacity: 1;
+    }
+  }
+  
+  .rotateIn {
+    animation: rotateIn 0.5s;
+  }
   
   
