--- a/src/App.css
+++ b/src/App.css
@@ -65,17 +65,18 @@ html {
 .navBar{
   top:200px;
   margin: 0 auto;
-  background-color: #2295bc;
+  background-color: #ff69b4;
   border-radius: 4px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.8);
 }
 .navScreenSize{
-  background-color:#2295bc ;
+  /* background-color:#2295bc ; */
+  background-color:#ff69b4;
 }
 .topNavLogo img{
   position: absolute;
   top:6%;
-  left:38%;
+  left:35%;
 }
 .nav-link{
  margin-right: 25px;
@@ -84,7 +85,7 @@ html {
 .homeLogo img{
   position: relative;
   width: 250px;
-  height: 110px;
+  height: 95px;
 }
 .medlabPhone i,.medlabMap i{
   position: absolute;
@@ -95,7 +96,7 @@ html {
   width: 60px;
   height: 60px;
   line-height: 60px;
-  background-color: #2a93c9 ;
+  background-color: yellow ;
   border-radius: 30px;
   text-align: center;
 }
@@ -111,7 +112,7 @@ html {
 }
 .medlabMap{
   position: absolute;
-  right: 260px;
+  right: 270px;
   top:100px
 }
 .medlabAdd{
@@ -211,12 +212,12 @@ html {
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background:#53682b;
 }
 
 /* General sidebar styles */
 .bm-menu {
-  background:  rgba(0, 0, 0, .70);
+  background: rgba(0,0,0,0.8);
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
   
@@ -242,15 +243,8 @@ html {
   height: 50px;
   position: fixed;
   z-index: 4;
-  background-color:#2a93c9 ;
+  background-color:#ff69b4 ;
 }
-/* .hamBurLogo{
-  position: absolute;
-  top: 0px;
-  left:45%;
-  margin:5px 0px ;
-  display: inline-block;  
-} */
 .actBtn{
   position: absolute;
   top: 0px;
@@ -264,16 +258,16 @@ html {
 }
 .hamInStyle img{
 
-  width: 200px;
-  height: 120px;
+  width: 220px;
+  height: 90px;
   position: absolute;
   top:0px;
   left: 0px;
-  margin: 30px 50px;
+  margin: 30px 30px;
 }
 .hamInStyle a{
 
-  color:#2a93c9;
+  color:#53682b;
 }
 /* what Makes US Different Section */
 .whatMakes{
@@ -331,7 +325,7 @@ html {
   }
 
 .reportDiv{
-  height: 75vh;
+  height: 85vh;
 } 
 .reportDiv img{
   position:absolute;
@@ -344,6 +338,7 @@ html {
   top: 25%;
   left: 2%;
 }
+
 .threeD{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2);
 }
@@ -360,11 +355,11 @@ html {
 	display: inline-block;
   width: auto;
 	height: 38px;
-	background-color: #2a93c9;
+	background-color: #008080;
 	-webkit-border-radius: 3px 4px 4px 3px;
 	-moz-border-radius: 3px 4px 4px 3px;
 	border-radius: 3px 4px 4px 3px;
-	border-left: 1px solid #2a93c9;
+	border-left: 1px solid #008080;
 	color: white;
 	font-weight: 300;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -385,7 +380,7 @@ html {
 	height: 0;
 	border-top: 19px solid transparent;
 	border-bottom: 19px solid transparent;
-	border-right: 19px solid #2a93c9;
+	border-right: 20px solid #008080;
 }
 /* Makes the circle */
 .tag:after {
@@ -412,6 +407,13 @@ html {
 .lifeCylce{
   margin: 20px 0px;
 }
+.lifeCylce img{
+  width:90%;
+  height: auto;
+  object-fit: cover;
+  background-color: white;
+  padding: 20px;
+}
 .cardStyling img{ 
  border-radius: 5px;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2);
@@ -419,7 +421,7 @@ html {
 .cardStyling :hover {
   transition: all 0.4s linear;
   transform: scale(1.1);
-  border:1px solid #2a93c9;
+  border:1px solid #ffc0cb;
 }
 .packages{
   border-radius: 5px;
@@ -433,6 +435,58 @@ html {
  margin:10px 12%;
 }}
 /* About */
+
+.flip-card{
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
+  border: 1px solid white;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2) */
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+  /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2) */
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+  width:300px; 
+  height:380px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2)
+}
+.flip-card-back h1{
+  margin-top: 50px;
+}
 .aboutButton {
   border: none;
   color: white;
@@ -442,8 +496,15 @@ html {
   background-color: #4CAF50;
 }
 .aboutImg img{
-  border-radius: 50px;
+  height: 350px;
+  border-radius: 5px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.2);
+}
+.largeFont {
+  font-size: 48px;
+}
+.xlargeFont{
+  font-size: 64px
 }
 @media only screen and (max-width: 427px) {
   .aboutImg img{
@@ -456,24 +517,36 @@ html {
 }
 @media only screen and (min-width: 428px) {
   .aboutImg img{
-    width:450px;
+    width:380px;
   }
   .aboutRoundImg img{
-    width:500px ;
+    width:400px ;
   }
+}
+@media only screen and (min-width: 1024px) {
+  #team{
+    padding: 0 10%;
+  }
+
 }
 /* footer */
 .footer{
-  background-color:#2a93c9;
+  background-color:#ffc0cb;
   margin:0px auto;
   padding: 20px 0px 20px 0px;
+}
+.footer h5{
+  color:#53682b;
+}
+.footer small,address,a,p{
+  color:#008080;
 }
 .medLogoFooter img{
   position: relative;
   top: 0;
   left: 0px;
   width: 250px;
-  height: 110px;
+  height: 90px;
 }
 .socialMediaIcons i{
  height:40px;
@@ -509,9 +582,9 @@ html {
     margin-top: 20px;
   }
 }
-@media only screen and (min-width: 1289px) {
+@media only screen and (min-width: 1024px) {
   .properPadding{
-    padding-top: 50px;
+    padding-top: 100px;
   }
 }
 
